# Test-app-githubactions

./: .editorconfig  .env.dev  .env.prod  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.dev.sh  entrypoint.prod.sh  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: hostelbe.yml  main.yml
apps/expenses/: admin.py  models.py  urls.py  views.py
apps/expenses/migrations/: 0001_initial.py  0002_alter_expense_amount.py  0003_expense_building_id.py  0004_remove_expense_building_id_expense_building.py
apps/feemanagement/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/feemanagement/migrations/: 0001_initial.py  0002_rename_status_collectfee_payment_method.py  0003_remove_collectfee_created_at_alter_collectfee_amount_and_more.py
apps/hostelinfo/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/hostelinfo/migrations/: 0001_initial.py  0002_user_account_status_user_account_type_and_more.py  0003_subscription.py  (+3 more)
apps/hostelmanagement/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/messmanagement/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/reports/: serializers.py  urls.py  views.py
apps/roomallocate/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/: env.py  manage.py  requirements.txt
core/hostelbackend/: asgi.py  base.py  settings.py  urls.py  wsgi.py
core/settings/: celery.py  cloudinary_storage.py
(+5 files in other folders)
